Transitioning cooking apparatus on separate threads.